@@ -461,7 +461,7 @@
       <dependency>
         <groupId>com.carrotsearch.randomizedtesting</groupId>
         <artifactId>randomizedtesting-runner</artifactId>
-        <version>2.0.9</version>
+        <version>2.0.10</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
